--- a/api/.env.example
+++ b/api/.env.example
@@ -3,8 +3,11 @@ DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=your_password_here
+DB_PASSWORD=postgres
 DB_DATABASE=financial_control
+
+# JWT Configuration
+JWT_SECRET=seu_super_secret_key_aqui_change_in_production_123456789
 
 # Application
 PORT=3000
