--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate:data": "npm run build && node -r dotenv/config dist/scripts/migrate-data.js",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "seed": "ts-node -r tsconfig-paths/register src/database/seeds/run-seed.ts",
+    "seed:build": "npm run build && node dist/database/seeds/run-seed.js"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
