--- a/api/package.json
+++ b/api/package.json
@@ -39,7 +39,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "pg": "^8.11.3",
+    "sqlite3": "^5.1.6",
+    "decimal.js": "^10.4.3",
     "typeorm": "^0.3.23"
   },
   "devDependencies": {
