--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "big.js": "^6.2.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
@@ -20,14 +21,17 @@
   "devDependencies": {
     "@mdi/font": "^7.4.47",
     "@tsconfig/node22": "^22.0.1",
+    "@types/big.js": "^6.2.2",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^7.0.2",
     "sass-embedded": "^1.88.0",
     "typescript": "~5.8.0",
-    "vite": "^6.2.4",
+    "vite": "^5.4.10",
+    "vite-plugin-pwa": "^0.20.5",
     "vite-plugin-vue-devtools": "^7.7.2",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.8",
+    "workbox-window": "^7.1.0"
   }
 }
